# mmr-engine

./: .env.example  .gitignore  AGENT_CONTEXT.md  Dockerfile  Makefile  README.md  alembic.ini  analysis_results.md  docker-compose.monitoring.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 000_setup.py  001_enum_types.py  002_system_tables.py  003_bronze_tables.py  004_silver_fx_snapshots.py  005_silver_canonical_transactions.py  006_silver_supporting_tables.py  007_gold_reconciliation_pairs.py  008_gold_discrepancies.py  009_gold_reporting_tables.py  010_gold_materialized_view.py  011_roles_and_permissions.py  012_seed_data.py
dashboard/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx
dashboard/app/(dashboard)/: layout.tsx  page.tsx
dashboard/app/onboarding/: layout.tsx  page.tsx
dashboard/components/: demo-banner.tsx  kpi-card.tsx  notification-bell.tsx  page-help.tsx  sidebar.tsx  stepper.tsx
dashboard/components/charts/: area-chart.tsx  bar-chart.tsx
dashboard/lib/: api.ts  demo-data.ts  hooks.ts  utils.ts
dashboard/public/: .gitkeep
docs/: API SPECIFICATION.md  CDA.md  DATA ARCHITECTURE.md  DATA DICTIONARY.md  DATA GOVERNANCE & SECURITY.md  ERD.md  GTM_STRATEGY.md  Header.md  OPERATIONS.md  PRD.md  QUALITY ASSURANCE.md  RELEVANCE AND THREAT ASSESSMENT.md  TDD.md
infra/grafana/dashboards/: mmr-overview.json
infra/grafana/provisioning/: dashboards.yml
infra/prometheus/: alerts.yml  prometheus.yml
infra/redpanda/: console_config.yml
scripts/: generate_demo_data.py  init_postgres.sql  security_check.py  simulate_webhooks.py
src/: __init__.py  config.py
src/alerting/: __init__.py  slack.py
src/api/: __init__.py  main.py
src/api/middleware/: __init__.py  auth.py  rate_limit.py
src/api/v1/: __init__.py
src/connectors/: __init__.py  base.py  flutterwave.py  flutterwave_polling.py  paystack.py  paystack_polling.py
src/contracts/: __init__.py
src/contracts/bronze/: __init__.py  flutterwave_schema.py  paystack_schema.py
src/dashboard/: __init__.py
src/engine/: __init__.py  cbn_report.py  discrepancy.py  fx.py  idempotency.py  matching.py  normaliser.py  pii.py  settlement.py
src/flows/: __init__.py  consumer_worker.py  fx_capture_flow.py  gap_detection_flow.py  ingestion_flow.py  matching_flow.py  polling_backfill_flow.py  transform_flow.py
src/observability/: __init__.py  logging.py  metrics.py
src/storage/: __init__.py  kafka_consumer.py  kafka_producer.py  minio_client.py  postgres.py
tests/: conftest.py
tests/contracts/: __init__.py  test_bronze_schemas.py  test_silver_schema.py
tests/integration/: conftest.py  test_api_routes.py  test_pipeline_flow.py
tests/unit/: test_auth.py  test_cbn_report.py  test_connectors.py  test_discrepancy.py  test_fx.py  test_idempotency.py  test_matching.py  test_normaliser.py  test_pii_masking.py  test_rate_limit.py  test_settlement.py
(+14 files in other folders)
