[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconciliation-engine"
version = "1.0.0"
description = "Cross-Border Mobile Money Reconciliation Engine for Nigerian Fintech"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Emmanuel Richard" }]

dependencies = [
    # ── Core Framework ──────────────────────────────────────────────────────
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "httpx>=0.27,<1.0",

    # ── Database ────────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",

    # ── Message Queue ───────────────────────────────────────────────────────
    "confluent-kafka>=2.4,<3.0",

    # ── Object Storage ──────────────────────────────────────────────────────
    "minio>=7.2,<8.0",
    "pyarrow>=16.0,<18.0",

    # ── Pipeline Orchestration ──────────────────────────────────────────────
    "prefect>=3.0,<4.0",

    # ── Data Validation ─────────────────────────────────────────────────────
    "pandera>=0.19,<1.0",
    "pandas>=2.2,<3.0",

    # ── Observability ───────────────────────────────────────────────────────
    "structlog>=24.1,<25.0",
    "prometheus-client>=0.20,<1.0",

    # ── Utilities ───────────────────────────────────────────────────────────
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dbt = [
    "dbt-postgres>=1.8,<2.0",
]
test = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "coverage>=7.5,<8.0",
    "httpx>=0.27,<1.0",
]
dev = [
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # do not perform function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
